@@ -14,7 +14,8 @@
 - updated: `F.file()` supports flags instead of middleware and flags supports extensions `['.jpg', '.png']`
 - updated: `F.sitemap()` returns object with a new field: `wildcard: {Boolean}`
 - updated: `F.problem()`, `F.change()`, `controller.problem()` and `controller.change()` write logs to the file
-- updated: `F.mail()` and `controller.mail()` subject is translated according the language
+- updated: `F.mail()` and `controller.mail()` subject is translated according to the language
+- updated: `F.file(fnValidation/path, fnExecute, [flags])` the file routing is completely changed
 
 - renamed: event `route-add` to `route`
 
